# JARVIS_for_bio

./: .gitignore  .mcp.json  CLAUDE.md  Enabling_Reason_At_Scale.md  Hypothesis_Generation.md  Missing_Infra_AIxDrug_Disc.md  README.md  claude
missing_infra_prototype/: README.md  pyproject.toml
missing_infra_prototype/data/curated/: gene_program_members.csv
missing_infra_prototype/demo/: run_amd.md  storyline.md
missing_infra_prototype/ingest/: init_db.py  load_credible_sets_and_coloc.py  load_pathway_membership.py  load_scrna_curated.py  load_workflows.py
missing_infra_prototype/jarvis_prototype.egg-info/: SOURCES.txt  top_level.txt
missing_infra_prototype/mcp_servers/: indices_server.py  workflow_server.py
posts/: May_24_2026.md
prototype/data/curated/: differential_expression.csv  gene_programs.csv
prototype/ingest/: schema.sql
prototype/jarvis_prototype.egg-info/: PKG-INFO
prototype/mcp_servers/: _smoke_test_indices.py
prototype/samples/: amd_fritsche_2016.sumstats.tsv
