[project]
name = "jarvis-prototype"
version = "0.1.0"
description = "AMD hypothesis-generation prototype: pre-computed indices + MCP servers + Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcp_servers", "ingest"]
